--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.6.0",
     "react-router-dom": "^6.10.0",
     "react-slick": "^0.29.0",
     "react-tabs": "^6.0.1",
